wp-content/themes/S2_Themes/css/header.css
header{
    z-index: 10;
    position: fixed;
    top: 0%;
    width: 100%;
    height: 69px;
    padding-left: 8vw;
    padding-right: 8vw;
    display: flex;
    align-items: center;
    justify-content: space-between;
    overflow: hidden;
}

.logo{
    height: auto;
    width: auto;
}


.blurDiv{
    z-index: 9;
    position: fixed;
    top: 0;
    width: 100%;
    height: 69px;
    -webkit-filter: blur(10px);
    -moz-filter: blur(10px);
    -o-filter: blur(10px);
    -ms-filter: blur(10px);
    filter: blur(10px);
    backdrop-filter: blur(10px);
    opacity: 10px;
}

